# hypriio

./: Cargo.nix  Cargo.toml  flake.nix  home-module.nix  nixos-module.nix  rust.nix
src/: control.rs  dbus.rs  hyprctl.rs  hypriioctl.rs  main.rs
