[package]
name = "hypriio"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hypriio"
path = "src/main.rs"

[[bin]]
name = "hypriioctl"
path = "src/hypriioctl.rs"

[dependencies]
zbus = { version = "5", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2.179"
toml = "0.8"
futures-lite = "2.6.1"
